@@ -1,5 +1,10 @@
 2012-05-01  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
+	* interp/vmlisp.lisp (COMP370): Move to c-util.boot
+	(compileLispDefinition): Move to lisp-backend.boot.
+
+2012-05-01  Gabriel Dos Reis  <gdr@cs.tamu.edu>
+
 	* interp/i-special.boot (interpREPEAT): Use CATCH directly.
 	* interp/int-top.boot (intloopSpadProcess): Likewise.
 	* interp/sys-macros.lisp (funcall): Remove.
